<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:textAlignment="center">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/colorUCRBlue"
        android:text="@string/campusSafetyHeader"
        android:textAlignment="center"
        android:textColor="@color/colorTextDark"
        android:textSize="30sp"
        android:elevation="8dp"
        android:textStyle="bold" />

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/textView3"
        android:scaleType="fitCenter"
        android:src="@drawable/back"
        android:tint="@color/colorTextDark"
        android:elevation="8dp"
        android:background="@color/colorUCRBlue" />

    <ScrollView
        android:id="@+id/ScrollView01"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/textView3"
        android:background="@color/colorPrimary"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="15dp"
            android:textAlignment="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/campusEscortHeader"
                android:textAlignment="center"
                android:id="@+id/textView5"
                android:textSize="25sp"
                android:paddingLeft="10dp"
                android:paddingTop="20dp"
                android:paddingBottom="15dp"
                android:paddingRight="10dp"
                android:textColor="@color/colorText" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/campusEscortPhoneInfo"
                android:id="@+id/textView4"
                android:paddingLeft="13dp"
                android:paddingRight="13dp"
                android:paddingBottom="20dp"
                android:textColor="@color/colorUCRGray" />

            <Button
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:text="@string/campusEscortButton"
                android:id="@+id/callCSES"
                android:background="@color/colorUCRGold"
                android:shadowColor="#c2c2c2"
                android:textAlignment="center"
                android:clickable="true"
                android:textColor="@color/colorTextDark" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/campusEscortLocationInfo"
                android:id="@+id/textView7"
                android:paddingLeft="13dp"
                android:paddingRight="13dp"
                android:paddingTop="20dp"
                android:paddingBottom="5dp"
                android:textColor="@color/colorUCRGray" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/campusEscortHours"
                android:id="@+id/textView9"
                android:textColor="@color/colorTextMenu"
                android:paddingLeft="13dp"
                android:paddingRight="13dp"
                android:paddingBottom="5dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/campusPoliceHeader"
                android:id="@+id/textView10"
                android:textSize="25sp"
                android:textAlignment="center"
                android:paddingLeft="13dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:paddingRight="13dp"
                android:textColor="@color/colorText" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/campusPoliceInfo"
                android:id="@+id/textView11"
                android:paddingLeft="13dp"
                android:paddingRight="13dp"
                android:paddingBottom="20dp"
                android:textColor="@color/colorUCRGray" />

            <Button
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/campusPoliceButton"
                android:id="@+id/callUCPD"
                android:background="@color/colorUCRGold"
                android:textAlignment="center"
                android:clickable="true"
                android:textColor="@color/colorTextDark" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/emergencyInfo"
                android:id="@+id/textView17"
                android:paddingLeft="13dp"
                android:paddingRight="13dp"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:textColor="@color/colorUCRGray" />

            <Button
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="@string/emergencyButton"
                android:id="@+id/call911"
                android:background="@android:color/holo_red_dark"
                android:textAlignment="center"
                android:clickable="true"
                android:textColor="@color/colorTextDark" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
