<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Reg_register"
        android:id="@+id/tvReg"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:height="50dp"
        android:textAlignment="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/Reg_F_name"
        android:id="@+id/tvF_Name"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tvReg"
        android:layout_toStartOf="@+id/tvM_Initial"
        android:textAlignment="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/Reg_Mi"
        android:id="@+id/tvM_Initial"
        android:layout_below="@+id/tvReg"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/Reg_L_name"
        android:id="@+id/tvL_Name"
        android:layout_below="@+id/tvReg"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/tvM_Initial"
        android:textAlignment="center" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/etFirst"
        android:layout_below="@+id/tvF_Name"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/tvM_Initial" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/etMI"
        android:layout_alignTop="@+id/etFirst"
        android:layout_toEndOf="@+id/etFirst"
        android:width="80dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/etLast"
        android:layout_alignTop="@+id/etMI"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/etMI" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/username_text"
        android:id="@+id/tvUser"
        android:layout_below="@+id/etFirst"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/etUsername"
        android:layout_below="@+id/tvUser"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Password_text"
        android:id="@+id/tvPassword"
        android:layout_below="@+id/etUsername"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/etPassword"
        android:layout_below="@+id/tvPassword"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Forgot_sub"
        android:id="@+id/bSubmit"
        android:layout_below="@+id/etIlearnPass"
        android:layout_toStartOf="@+id/etMI"
        android:layout_marginTop="42dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/backReg"
        android:id="@+id/bBackReg"
        android:layout_alignBottom="@+id/bSubmit"
        android:layout_toEndOf="@+id/etMI" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="(optional)"
        android:id="@+id/tvOp"
        android:layout_below="@+id/etPassword"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/etLast" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Ilearn Username:"
        android:id="@+id/tvIlearnUser"
        android:layout_below="@+id/tvOp"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/etIlearnUser"
        android:layout_below="@+id/tvIlearnUser"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/etLast" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Ilearn Password:"
        android:id="@+id/tvIlearnPass"
        android:layout_below="@+id/tvOp2"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/etIlearnPass"
        android:layout_below="@+id/tvIlearnPass"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/etLast" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="(optional)"
        android:id="@+id/tvOp2"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/etIlearnUser"
        android:layout_alignParentEnd="true" />

</RelativeLayout>